--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Newspaper Page</title>
     <style>
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(to right, #ff7e5f, #feb47b);
+            font-family: 'Helvetica Neue', Arial, sans-serif;
+            background: linear-gradient(to right, #4b79a1, #283e51);
             margin: 0;
             padding: 0;
             display: flex;
@@ -17,18 +17,19 @@
             color: #fff;
         }
         .container {
-            background: rgba(255, 255, 255, 0.1);
-            padding: 40px;
-            border-radius: 15px;
-            box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-            backdrop-filter: blur(10px);
-            -webkit-backdrop-filter: blur(10px);
+            background: rgba(255, 255, 255, 0.2);
+            padding: 50px;
+            border-radius: 10px;
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
+            backdrop-filter: blur(12px);
+            -webkit-backdrop-filter: blur(12px);
             border: 1px solid rgba(255, 255, 255, 0.3);
             text-align: center;
         }
         h1 {
-            font-size: 2.5em;
+            font-size: 3em;
             margin: 0;
+            font-weight: 300;
         }
     </style>
 </head>
